--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -20,14 +20,14 @@ pipeline {
       }
     }
     stage('Static Code Analysis') {
-      environment {
-        SONAR_URL = "http:3.110.28.172:9000//"
+     steps{
+       """ sh
+   mvn clean verify sonar:sonar \
+  -Dsonar.projectKey=Demo \
+  -Dsonar.host.url=http://3.110.28.172:9000 \
+  -Dsonar.login=sqp_ad5cda38d9bd3dbd408750a4b4c2b61054ed5fe8  """
       }
-      steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
-        }
-      }
+  
     }
     stage('Build and Push Docker Image') {
       environment {
