--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -22,10 +22,11 @@ pipeline {
     stage('Static Code Analysis') {
      steps{
        """ sh
-   mvn clean verify sonar:sonar \
-  -Dsonar.projectKey=Demo \
-  -Dsonar.host.url=http://3.110.28.172:9000 \
-  -Dsonar.login=sqp_ad5cda38d9bd3dbd408750a4b4c2b61054ed5fe8  """
+          mvn clean verify sonar:sonar \
+          Dsonar.projectKey=Demo \
+          Dsonar.host.url=http://3.110.28.172:9000 \
+          Dsonar.login=sqp_ad5cda38d9bd3dbd408750a4b4c2b61054ed5fe8  
+       """
       }
   
     }
